# lambdallm

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  sitemap.xml  tsconfig.json
.github/workflows/: ci.yml  docs.yml  publish.yml
adr/: index.html
adr/001-handler-decorator-pattern/: index.html
adr/002-dynamodb-state-backend/: index.html
adr/003-lazy-imports-cold-start/: index.html
adr/004-checkpoint-resume/: index.html
api-reference/: index.html
architecture/: index.html
benchmarks/: README.md  run_benchmarks.py  run_coldstart.sh  run_comparison.py  run_latency.py  run_package_size.py
benchmarks/results/: comparison_final_20260511_133848.json  full_benchmark_20260511_132912.json
changelog/: index.html
contributing/: index.html
docs/: api-reference.md  architecture.md  arxiv-paper.tex  changelog.md  contributing.md  getting-started.md  index.md  migration-guide.md  troubleshooting.md  tutorials.md
docs/adr/: 001-handler-decorator-pattern.md  002-dynamodb-state-backend.md  003-lazy-imports-cold-start.md  004-checkpoint-resume.md  README.md
examples/: agent_with_tools.py  basic_summarizer.py  chat_with_memory.py  multi_step_chain.py  streaming_chat.py
getting-started/: index.html
migration-guide/: index.html
search/: search_index.json
src/lambdallm/: __init__.py
src/lambdallm/agents/: __init__.py  agent.py  async_tools.py  router.py  sandbox.py  tool.py
src/lambdallm/chains/: __init__.py  chain.py  multi_model.py  runner.py
src/lambdallm/cli/: __init__.py  dev.py  init.py  main.py
src/lambdallm/core/: config.py  context.py  cost_router.py  exceptions.py  handler.py  models.py  prompt.py  response_stream.py  retry.py  streaming.py  structured_output.py
src/lambdallm/deploy/: __init__.py  canary.py  deployer.py  generator.py  layer_builder.py
src/lambdallm/middleware/: __init__.py  base.py  cost.py  logging.py  pipeline.py
src/lambdallm/observability/: __init__.py  ab_testing.py  cost_tracker.py  metrics.py  prompt_analytics.py  router.py  tracer.py
src/lambdallm/providers/: __init__.py  base.py  bedrock.py
src/lambdallm/state/: __init__.py  auto_session.py  context_window.py  dynamodb.py  memory.py  session.py
src/lambdallm/testing/: __init__.py  golden.py  mocks.py
tests/: test_agents.py  test_chains.py  test_config.py  test_cost_router.py  test_handler.py  test_layer_builder.py  test_middleware_pipeline.py  test_models.py  test_multi_model_chain.py  test_observability.py  test_prompt.py  test_response_stream.py  test_retry.py  test_session.py  test_streaming.py  test_structured_output.py  ts-lambdallm.test.ts
tests/examples/: test_example_templates.py
tests/golden/: summarize_cases.json  test_golden.py
tests/integration/: test_dynamodb_integration.py  test_integration.py
tests/unit/: test_unit_handler.py  test_unit_prompt.py  test_unit_tools.py
troubleshooting/: index.html
ts-src/: index.ts  package.json  tsconfig.json
ts-src/agents/: agent.ts  extras.ts
ts-src/chains/: chain.ts
ts-src/core/: context.ts  exceptions.ts  handler.ts  models.ts  prompt.ts
ts-src/middleware/: base.ts  logging.ts
ts-src/observability/: index.ts
ts-src/state/: contextWindow.ts  session.ts  store.ts
ts-src/testing/: index.ts
tutorials/: index.html
