[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lambdallm"
version = "0.1.0"
description = "Serverless-native LLM orchestration framework for AWS Lambda"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Gaurav Kumar Sinha", email = "gaurav@substrai.dev"},
]
keywords = ["genai", "llm", "serverless", "aws", "lambda", "bedrock", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.optional-dependencies]
bedrock = ["boto3>=1.28.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1.0", "moto>=4.0"]
all = ["boto3>=1.28.0"]

[project.urls]
Homepage = "https://substrai.dev"
Repository = "https://github.com/substrai/lambdallm"
Documentation = "https://docs.substrai.dev/lambdallm"
Issues = "https://github.com/substrai/lambdallm/issues"

[project.scripts]
lambdallm = "lambdallm.cli.main:cli"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
