[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "substrai-lambdallm"
version = "1.6.0"
description = "Serverless-native LLM orchestration framework for AWS Lambda"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Gaurav Kumar Sinha", email = "gaurav@substrai.dev"},
]
keywords = ["genai", "llm", "serverless", "aws", "lambda", "bedrock", "framework", "agents", "chains"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.optional-dependencies]
bedrock = ["boto3>=1.28.0"]
xray = ["aws-xray-sdk>=2.12.0"]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0", "ruff>=0.1.0", "moto>=4.0"]
all = ["boto3>=1.28.0", "aws-xray-sdk>=2.12.0", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://substrai.dev"
Repository = "https://github.com/substrai/lambdallm"
Documentation = "https://docs.substrai.dev/lambdallm"
Issues = "https://github.com/substrai/lambdallm/issues"
Changelog = "https://github.com/substrai/lambdallm/blob/main/CHANGELOG.md"

[project.scripts]
lambdallm = "lambdallm.cli.main:cli"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/lambdallm"]

[tool.coverage.run]
source = ["lambdallm"]
omit = ["*/tests/*", "*/cli/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 70
